# SparsityDrivenDetector

./: README.md  conanfile.py  dependencies.py  install_with_profile.bat
analysis/cmake/: CMakeLists.txt
analysis/src/: compare_performance.py  compare_performance_table_01.py  compare_performance_table_02.py  compare_timings.py  config.py  config_template.txt  make_configs.py  make_configs_002.py  make_configs_003.py  plots_experiment_003.py  template_template.txt  timing_barplot.py  timing_graph.py
cmake/: CMakeLists.txt  FindCPLEX.cmake
controller/: conanfile.py
controller/cmake/: CMakeLists.txt
controller/include/: Commander.h  Configuration.h  Context.h  Controller.h  WindowsConsoleListener.h  application_helper.h
controller/src/: Commander.cpp  Configuration.cpp  Context.cpp  Controller.cpp  WindowsConsoleListener.cpp
environment/: conanfile.py
environment/cmake/: CMakeLists.txt
environment/include/: Actor.h  CommonGeometricTypes.h  Environment.h  Face.h  Frame.h  IdentifiableCamera.h  Mesh.h  WorldCoordinateSystem_SDD.h  serialization_helper.h
environment/src/: Actor.cpp  Environment.cpp  Face.cpp  Frame.cpp  IdentifiableCamera.cpp  Mesh.cpp  serialization_helper.cpp
executable/: conanfile.py
executable/cmake/: CMakeLists.txt
executable/src/: SDD_UEScene_Create.cpp  SDD_UEScene_LoadDetector.cpp  SDD_UEScene_LoadDict.cpp  experiments.cpp  interactive.cpp
experiment/: conanfile.py
experiment/cmake/: CMakeLists.txt
experiment/include/: ConfigurationExporter.h  Experiment.h  ExperimentCommander.h  ExperimentExporter.h  TimingExporter.h
experiment/src/: ConfigurationExporter.cpp  Experiment.cpp  ExperimentCommander.cpp  ExperimentExporter.cpp  TimingExporter.cpp
fusion/: conanfile.py
fusion/cmake/: CMakeLists.txt
fusion/include/: Fusion.h
fusion/src/: Fusion.cpp
interface/: conanfile.py
interface/cmake/: CMakeLists.txt
interface/include/: MainWindow.h
interface/src/: MainWindow.cpp
interface/ui/: MainWindow.ui
res/: person_01.ppm  person_02.ppm  settings.ini
shape_from_silhouette/cmake/: CMakeLists.txt
shape_from_silhouette/include/: ExtendedVoxel.h  ShapeFromSilhouette.h  Space.h  VoxelPredicates.h  convexHull_legacy.h
shape_from_silhouette/src/: ExtendedVoxel.cpp  ShapeFromSilhouette.cpp  Space.cpp  convexHull.cpp  convexHull_legacy.cpp  serializationTests.cpp
shape_from_silhouette_bridge/: conanfile.py
shape_from_silhouette_bridge/cmake/: CMakeLists.txt
shape_from_silhouette_bridge/include/: ShapeFromSilhouetteBridge.h  ShapeFromSilhouette_Impl.h  ShapeFromSilhouette_ImplCuda.h  ShapeFromSilhouette_ImplHost.h
shape_from_silhouette_bridge/src/: ShapeFromSilhouetteBridge.cpp  ShapeFromSilhouette_ImplCuda.cpp  ShapeFromSilhouette_ImplHost.cpp
shape_from_silhouette_common/: conanfile.py
shape_from_silhouette_common/cmake/: CMakeLists.txt
shape_from_silhouette_common/include/: Voxel.h  VoxelCluster.h  cuda_host_defines_interop.h  cuda_vector_functions_interop.h  cuda_vector_types_interop.h  space_sequentialFill.h  vector_type_helper.h  voxel_clustering.h
shape_from_silhouette_common/src/: VoxelCluster.cpp  space_sequentialFill.cpp  voxel_clustering.cpp
shape_from_silhouette_cuda/: conanfile.py
shape_from_silhouette_cuda/cmake/: CMakeLists.txt
shape_from_silhouette_cuda/include/: Face.cuh  ShapeFromSilhouetteCuda.h  SpaceCuda.h  TemporaryDeviceVector.h  VoxelMap.h  VoxelSegmentationInfo.cuh  deviceStructs.h  geometryPredicates.cuh  kernel_VoxelMap.cuh  kernel_convexHull.cuh  kernel_integralImage.cuh  kernel_spaceCreation.cuh  kernel_spaceUpdate.cuh  kernel_spaceUtils.cuh
shape_from_silhouette_cuda/src/: Face.cu  ShapeFromSilhouetteCuda.cpp  SpaceCuda.cpp  VoxelMap.cpp  VoxelSegmentationInfo.cu  kernel_Space.cu  kernel_VoxelMap.cu  kernel_convexHull.cu  kernel_integralImage.cu  kernel_spaceCreation.cu  kernel_spaceUpdate.cu
sparsity_driven_detector/: conanfile.py
sparsity_driven_detector/cmake/: CMakeLists.txt
sparsity_driven_detector/include/: Dictionary.h  GridPoints.h  IOptimizationProblem.h  OptimizationProblem.h  OptimizationProblemDecorator.h  OptimizationProblemFactory.h  OptimizationProblemFactoryCollection.h  OptimizationProblemFactory_Multi.h  OptimizationProblemFactory_MultiLayered.h  OptimizationProblemFactory_Single.h  OptimizationProblemFactory_SingleLayered.h  OptimizationProblemMatrixWriter.h  OptimizationProblemTimer.h  OptimizationProblemWriter.h  OptimizationProblem_Multi.h  OptimizationProblem_MultiLayered.h  OptimizationProblem_Single.h  OptimizationProblem_SingleLayered.h  Solution.h  SparseMatrix.h  SparsityDrivenDetector.h  SparsityDrivenDetectorPostProcessing.h  Template.h  TemplateTransformer.h  conversion_helper.h
sparsity_driven_detector/src/: Dictionary.cpp  GridPoints.cpp  OptimizationProblem.cpp  OptimizationProblemDecorator.cpp  OptimizationProblemFactory.cpp  OptimizationProblemFactory_Multi.cpp  OptimizationProblemFactory_MultiLayered.cpp  OptimizationProblemFactory_Single.cpp  OptimizationProblemFactory_SingleLayered.cpp  OptimizationProblemMatrixWriter.cpp  OptimizationProblemTimer.cpp  OptimizationProblemWriter.cpp  OptimizationProblem_Multi.cpp  OptimizationProblem_MultiLayered.cpp  OptimizationProblem_Single.cpp  OptimizationProblem_SingleLayered.cpp  PositionMapper.cpp  SparsityDrivenDetector.cpp  SparsityDrivenDetectorPostProcessing.cpp  Template.cpp  TemplateTransformer.cpp  conversion_helper.cpp
timer/: conanfile.py
timer/cmake/: CMakeLists.txt
timer/include/: ApplicationTimer.h  TimingEntry.h  TimingSession.h  TimingStream.h
timer/src/: ApplicationTimer.cpp  TimingEntry.cpp  TimingSession.cpp  (+1 more)
unreal_input/: conanfile.py
unreal_input/cmake/: CMakeLists.txt
utility/: conanfile.py
visualization_environment/: conanfile.py
visualization_environment/cmake/: CMakeLists.txt
visualization_fusion/: conanfile.py
visualization_fusion/cmake/: CMakeLists.txt
visualization_shape_from_silhouette/cmake/: CMakeLists.txt
visualization_sparsity_driven_detector/: conanfile.py
visualization_sparsity_driven_detector/cmake/: CMakeLists.txt
(+61 files in other folders)
